--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -57,11 +57,11 @@
     url: "{{ consul_zip_url }}"
     dest: "{{ role_path }}/files/{{ consul_pkg }}"
     checksum: "sha256:{{ consul_sha256.stdout }}"
-    timeout: "42"
   become: false
   vars:
     ansible_become: false
   tags: installation
+  run_once: true
   when: not consul_package.stat.exists | bool
   delegate_to: 127.0.0.1
 
@@ -81,6 +81,7 @@
     ansible_become: false
   register: install_temp
   tags: installation
+  run_once: true
   delegate_to: 127.0.0.1
 
 - name: Unarchive Consul package
@@ -92,6 +93,7 @@
   vars:
     ansible_become: false
   tags: installation
+  run_once: true
   delegate_to: 127.0.0.1
 
 - name: Install Consul
